--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <h3>Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</h3>
 
 <p>
-      <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fheinzberndhoenig02.cloudcontrolled.com%2F"><img
+      <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fheinzberndhoenig.cloudcontrolled.com%2F"><img
           src="http://www.w3.org/Icons/valid-xhtml10"
           alt="Valid XHTML 1.0!" height="31" width="88" /></a>
     </p>
 <p>
-      <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fheinzberndhoenig02.cloudcontrolled.com%2F"><img
+      <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fheinzberndhoenig.cloudcontrolled.com%2F"><img
           src="http://www.w3.org/Icons/valid-css2"
           alt="CSS Validation Service" height="31" width="88" /></a>
     </p>    
