--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
    	</thead>
    	<tbody>
    		<tr>
-   			<td>&lt;a&gt;&lt;/a&gt;</td>
+   			<td>&lt;a&gt;...&lt;/a&gt;</td>
    			<td>Verweis (Hyperlink) und Anker für Verweise</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;abbr&gt;&lt;/abbr&gt;</td>
+   			<td>&lt;abbr&gt;...&lt;/abbr&gt;</td>
    		
    			<td>Abkürzung</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;acronym&gt;&lt;/acronym&gt;</td>
+   			<td>&lt;acronym&gt;...&lt;/acronym&gt;</td>
    			<td>Akronym</td>
    			<td>     </td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;address&gt;&lt;/address&gt;</td>   		
+   			<td>&lt;address&gt;...&lt;/address&gt;</td>   		
    			<td>Kontaktangabe zum Autor eines Inhalts (Credits)</td>
    			<td>Block</td>
    			<td>semantisch</td>
@@ -66,37 +66,37 @@
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;b&gt;&lt;/b&gt;</td>   		
+   			<td>&lt;b&gt;...&lt;/b&gt;</td>   		
    			<td>Stilistische Hervorhebung im Text (üblicherweise fett dargestellt)</td>
    			<td>Inline</td>
    			<td>nicht semantisch;</td>
    		</tr>
    		<tr>
-   			<td>&lt;base&gt;&lt;/base&gt;</td>
+   			<td>&lt;base&gt;...&lt;/base&gt;</td>
    			<td>Basis-URL für Referenzen</td>
    			<td></td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;bdo&gt;&lt;/bdo&gt;</td>   		
+   			<td>&lt;bdo&gt;...&lt;/bdo&gt;</td>   		
    			<td>Richtungsänderung bei bidirektionalem Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;big&gt;&lt;/big&gt;</td>
+   			<td>&lt;big&gt;...&lt;/big&gt;</td>
    			<td>Großschrift</td>
    			<td></td>
    			<td>nicht semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;blockquote&gt;&lt;/blockquote&gt;</td>   		
+   			<td>&lt;blockquote&gt;...&lt;/blockquote&gt;</td>   		
    			<td>Zitat in Form eines eigenen Textabsatzes</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;body&gt;&lt;/body&gt;</td>
+   			<td>&lt;body&gt;...&lt;/body&gt;</td>
    			<td>Inhaltsbereich eines HTML-Dokuments</td>
    			<td>Inline</td>
    			<td>semantisch</td>
@@ -108,25 +108,25 @@
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;button&gt;&lt;/button&gt;</td>
+   			<td>&lt;button&gt;...&lt;/button&gt;</td>
    			<td>Schaltfläche in einem Formular</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;caption&gt;&lt;caption&gt;</td>   		
+   			<td>&lt;caption&gt;...&lt;caption&gt;</td>   		
    			<td>Tabellenüberschrift / -unterschrift</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;cite&gt;&lt;/cite&gt;</td>
+   			<td>&lt;cite&gt;...&lt;/cite&gt;</td>
    			<td>Zitat innerhalb eines Absatzes</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;code&gt;&lt;/code&gt;</td>   		
+   			<td>&lt;code&gt;...&lt;/code&gt;</td>   		
    			<td>Quelltext-Auszug innerhalb eines Absatzes</td>
    			<td>Inline</td>
    			<td>semantisch</td>
@@ -138,67 +138,67 @@
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;colgroup&gt;&lt;/colgroup&gt;</td>   		
+   			<td>&lt;colgroup&gt;...&lt;/colgroup&gt;</td>   		
    			<td>Gruppe von Tabellenspalten</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;dd&gt;&lt;/dd&gt;</td>
+   			<td>&lt;dd&gt;...&lt;/dd&gt;</td>
    			<td>Definition, Beschreibung, detaillierter Inhalt zu einem dt-Element</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;del&gt;&lt;/del&gt;</td>   		
+   			<td>&lt;del&gt;...&lt;/del&gt;</td>   		
    			<td>gelöschter Inhalt (Änderungsmarkierung)</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;dfn&gt;&lt;/dfn&gt;</td>
+   			<td>&lt;dfn&gt;...&lt;/dfn&gt;</td>
    			<td>Definition innerhalb eines Absatzes</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;div&gt;&lt;/div&gt;</td>   		
+   			<td>&lt;div&gt;...&lt;/div&gt;</td>   		
    			<td>Allgemeiner Bereich</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;dl&gt;&lt;/dl&gt;</td>
+   			<td>&lt;dl&gt;...&lt;/dl&gt;</td>
    			<td>Liste mit dt- und dd-Elementen, für Definitionslisten, Dialoge usw.</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;dt&gt;&lt;/dt&gt;</td>   		
+   			<td>&lt;dt&gt;...&lt;/dt&gt;</td>   		
    			<td>Zu definierender Ausdruck in einer Definitionsliste, Sprechername in einem Dialog usw.</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;em&gt;&lt;/em&gt;</td>
+   			<td>&lt;em&gt;...&lt;/em&gt;</td>
    			<td>emphatischer Ausdruck innerhalb eines Absatzes (z.B. überspitzte Formulierung)</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;fieldset&gt;&lt;/fieldset&gt;</td>   		
+   			<td>&lt;fieldset&gt;...&lt;/fieldset&gt;</td>   		
    			<td>Gruppe von Elementen in einem Formular, Reiter in einem Dialog</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;form&gt;&lt;/form&gt;</td>
+   			<td>&lt;form&gt;...&lt;/form&gt;</td>
    			<td>Formular, Dialog</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;h1&gt;-&lt;h6&gt;&lt;/h1&gt;-&lt;/h6&gt;</td>   		
+   			<td>&lt;h1&gt;-&lt;h6&gt;...&lt;/h1&gt;-&lt;/h6&gt;</td>   		
    			<td>Überschrift 1. bis 6. Ordnung</td>
    			<td>Block</td>
    			<td>semantisch</td>
@@ -216,13 +216,13 @@
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;html&gt;&lt;/html&gt;</td>
+   			<td>&lt;html&gt;...&lt;/html&gt;</td>
    			<td>Dokumentelement von HTML-Dokumenten, schließt das gesamte Dokument ein</td>
    			<td></td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;i&gt;&lt;/i&gt;</td>   		
+   			<td>&lt;i&gt;...&lt;/i&gt;</td>   		
    			<td>spezieller Ausdruck im Text, z.B. Fachterminus oder Idiom (üblicherweise kursiv dargestellt)</td>
    			<td>Inline</td>
    			<td>semantisch</td>
@@ -240,31 +240,31 @@
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;ins&gt;&lt;/ins&gt;</td>
+   			<td>&lt;ins&gt;...&lt;/ins&gt;</td>
    			<td>Eingefügter Inhalt (Änderungsmarkierung)</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;kbd&gt;&lt;/kbd&gt;</td>   		
+   			<td>&lt;kbd&gt;...&lt;/kbd&gt;</td>   		
    			<td>Darstellung eines über Tastatur einzugebenden Textes im Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;label&gt;&lt;/label&gt;</td>
+   			<td>&lt;label&gt;...&lt;/label&gt;</td>
    			<td>Beschriftungstext eines Formularfeldes</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;legend&gt;&lt;/legend&gt;</td>   		
+   			<td>&lt;legend&gt;...&lt;/legend&gt;</td>   		
    			<td>Überschrift für eine fieldset-Gruppe von Elementen in einem Formular</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;li&gt;&lt;/li&gt;</td>
+   			<td>&lt;li&gt;...&lt;/li&gt;</td>
    			<td>Listenpunkt in einer ul-, ol- oder menu-Liste</td>
    			<td>Block</td>
    			<td>semantisch</td>
@@ -276,7 +276,7 @@
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;map&gt;&lt;/map&gt;</td>
+   			<td>&lt;map&gt;...&lt;/map&gt;</td>
    			<td>Bereich für verweis-sensitive Grafiken</td>
    			<td>Inline</td>
    			<td>semantisch</td>
@@ -288,37 +288,37 @@
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;noscript&gt;&lt;/noscript&gt;</td>
+   			<td>&lt;noscript&gt;...&lt;/noscript&gt;</td>
    			<td>Bereich für Inhalte, die angezeigt werden, wenn JavaScript im Browser deaktiviert oder nicht verfügbar ist</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;object&gt;&lt;/object&gt;</td>   		
+   			<td>&lt;object&gt;...&lt;/object&gt;</td>   		
    			<td>Eingebettetes Objekt, geeignet für spezielle Multimedia-Objekte, Java-Applets usw.</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;ol&gt;&lt;/ol&gt;</td>
+   			<td>&lt;ol&gt;...&lt;/ol&gt;</td>
    			<td>Geordnete (z.B. nummerierte) Liste</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;optgroup&gt;&lt;/optgroup&gt;</td>   		
+   			<td>&lt;optgroup&gt;...&lt;/optgroup&gt;</td>   		
    			<td>Gruppe von Auswahlmöglichkeiten in einer Auswahlliste</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;option&gt;&lt;/option&gt;</td>
+   			<td>&lt;option&gt;...&lt;/option&gt;</td>
    			<td>Auswahlmöglichkeit in einer Auswahlliste</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;p&gt;&lt;/p&gt;</td>   		
+   			<td>&lt;p&gt;...&lt;/p&gt;</td>   		
    			<td>Paragraph, Absatz</td>
    			<td>Block</td>
    			<td>semantisch</td>
@@ -330,139 +330,139 @@
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;pre&gt;&lt;/pre&gt;</td>   		
+   			<td>&lt;pre&gt;...&lt;/pre&gt;</td>   		
    			<td>Präformatierter Text (alle Whitespace-Zeichen werden im Browser so dargestellt wie im Text enthalten)</td>
    			<td>Block</td>
    			<td>nicht semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;q&gt;&lt;/q&gt;</td>
+   			<td>&lt;q&gt;...&lt;/q&gt;</td>
    			<td>Wörtliche Rede in einem Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;samp&gt;&lt;/samp&gt;</td>   		
+   			<td>&lt;samp&gt;...&lt;/samp&gt;</td>   		
    			<td>Beispieltext in einem dokumentierenden Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;script&gt;&lt;/script&gt;</td>
+   			<td>&lt;script&gt;...&lt;/script&gt;</td>
    			<td>Scriptbereich für JavaScript und andere Scriptsprachen</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;select&gt;&lt;/select&gt;</td>   		
+   			<td>&lt;select&gt;...&lt;/select&gt;</td>   		
    			<td>Auswahlliste in einem Formular</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;small&gt;&lt;/small&gt;</td>
+   			<td>&lt;small&gt;...&lt;/small&gt;</td>
    			<td>kleiner dargestellter Text als Normalschrift</td>
    			<td>Inline</td>
    			<td>nicht semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;span&gt;&lt;/span&gt;</td>   		
+   			<td>&lt;span&gt;...&lt;/span&gt;</td>   		
    			<td>allgemeiner Bereich innerhalb eines Absatzes</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;strong&gt;&lt;/strong&gt;</td>
+   			<td>&lt;strong&gt;...&lt;/strong&gt;</td>
    			<td>stark betonter Inhalt im Text</td>
    			<td>Inline</td>
    			<td>nicht semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;style&gt;&lt;/style&gt;</td>   		
+   			<td>&lt;style&gt;...&lt;/style&gt;</td>   		
    			<td>Bereich für Stylesheet-Definitionen, z.B. in CSS</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;sub&gt;&lt;/sub&gt;</td>
+   			<td>&lt;sub&gt;...&lt;/sub&gt;</td>
    			<td>Tiefgestellter Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;sup&gt;&lt;/sup&gt;</td>   		
+   			<td>&lt;sup&gt;...&lt;/sup&gt;</td>   		
    			<td>Hochgestellter Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;table&gt;&lt;/table&gt;</td>
+   			<td>&lt;table&gt;...&lt;/table&gt;</td>
    			<td>Tabelle</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;tbody&gt;&lt;/tbody&gt;</td>   		
+   			<td>&lt;tbody&gt;...&lt;/tbody&gt;</td>   		
    			<td>Tabellenkörper mit den eigentlichen Daten</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;td&gt;&lt;/td&gt;</td>
+   			<td>&lt;td&gt;...&lt;/td&gt;</td>
    			<td>Tabellenzelle</td>
    			<td></td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;textarea&gt;&lt;/textarea&gt;</td>   		
+   			<td>&lt;textarea&gt;...&lt;/textarea&gt;</td>   		
    			<td>Mehrzeiliger Eingabebereich in einem Formular</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;tfoot&gt;&lt;/tfoot&gt;</td>
+   			<td>&lt;tfoot&gt;...&lt;/tfoot&gt;</td>
    			<td>Fußbereich in einer Tabelle, z.B. für summarische Daten</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;th&gt;&lt;/th&gt;</td>   		
+   			<td>&lt;th&gt;...&lt;/th&gt;</td>   		
    			<td>Tabellenkopfzelle</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;thead&gt;&lt;/thead&gt;</td>
+   			<td>&lt;thead&gt;...&lt;/thead&gt;</td>
    			<td>Kopfbereich einer Tabelle</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;title&gt;&lt;/title&gt;</td>   		
+   			<td>&lt;title&gt;...&lt;/title&gt;</td>   		
    			<td>Titel eines HTML-Dokuments</td>
    			<td>Inline</td>
    			<td>semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;tr&gt;&lt;/tr&gt;</td>
+   			<td>&lt;tr&gt;...&lt;/tr&gt;</td>
    			<td>Tabellenzeile</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;tt&gt;&lt;/tt&gt;</td>   		
+   			<td>&lt;tt&gt;...&lt;/tt&gt;</td>   		
    			<td>»Fernschreiber«-Text</td>
    			<td></td>
    			<td>nicht semantisch</td>
    		</tr>
    		<tr>
-   			<td>&lt;ul&gt;&lt;/ul&gt;</td>
+   			<td>&lt;ul&gt;...&lt;/ul&gt;</td>
    			<td>Unsortierte Liste (Aufzählungsliste)</td>
    			<td>Block</td>
    			<td>semantisch</td>
    		</tr>
    		<tr class="alt">
-   			<td>&lt;var&gt;&lt;/var&gt;</td>   		
+   			<td>&lt;var&gt;...&lt;/var&gt;</td>   		
    			<td>Variabler Name in einem dokumentierenden Text</td>
    			<td>Inline</td>
    			<td>semantisch</td>
